# xstdtsl

./: .gitignore  Makefile.am  README.md  configure.ac
Visual_Studio/vs17/xstdtsl/: xstdtsl.sln  xstdtsl.vcxproj  xstdtsl.vcxproj.filters
Visual_Studio/vs17/xstdtsl_mutex_test/: xstdtsl_mutex_test.vcxproj  xstdtsl_mutex_test.vcxproj.filters
Visual_Studio/vs17/xstdtsl_vector_test/: xstdtsl_vector_test.vcxproj  xstdtsl_vector_test.vcxproj.filters
Visual_Studio/vs19/xstdtsl/: xstdtsl.sln
Visual_Studio/vs19/xstdtsl/safe_binary_tree_test/: safe_binary_tree_test.vcxproj  safe_binary_tree_test.vcxproj.filters
Visual_Studio/vs19/xstdtsl/xstdtsl/: xstdtsl.vcxproj  xstdtsl.vcxproj.filters
Visual_Studio/vs19/xstdtsl/xstdtsl_avl_tree_test/: xstdtsl_avl_tree_test.vcxproj  xstdtsl_avl_tree_test.vcxproj.filters
Visual_Studio/vs19/xstdtsl/xstdtsl_mutex_test/: xstdtsl_mutex_test.vcxproj  xstdtsl_mutex_test.vcxproj.filters
Visual_Studio/vs19/xstdtsl/xstdtsl_vector_test/: xstdtsl_vector_test.vcxproj  xstdtsl_vector_test.vcxproj.filters
include/: xstd_memory.hpp  xstd_memory_internal.hpp  xstd_types.hpp  xstdtsl_avl_tree_test.hpp  xstdtsl_binary_tree_helper.hpp  xstdtsl_binary_tree_test.hpp  xstdtsl_binary_trees_test_common.hpp  xstdtsl_enums.hpp  xstdtsl_mutex  xstdtsl_mutex_C.h  xstdtsl_mutex_internal.hpp  xstdtsl_mutex_test.hpp  xstdtsl_safe_avl_tree  xstdtsl_safe_binary_tree  xstdtsl_safe_map  xstdtsl_safe_rb_tree  xstdtsl_safe_vector  xstdtsl_system_C.h  xstdtsl_vector_internal.hpp  xstdtsl_vector_test.hpp
src/: shared_ptr.cpp  system.cpp  vector.cpp  xstdtsl_avl_tree_test.cpp  xstdtsl_avl_tree_test_common.cpp  xstdtsl_binary_tree_test.cpp  xstdtsl_binary_tree_test_common.cpp  xstdtsl_map_test.cpp  xstdtsl_mutex.cpp  xstdtsl_mutex_test.cpp  xstdtsl_mutex_test_common.cpp  xstdtsl_rb_tree_test.cpp  xstdtsl_vector_test.cpp  xstdtsl_vector_test_common.cpp
